Исправить код согласно логам github actions